--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "build": "rmdir /S dist && npx tsc || npx tsc",
-    "flemme": "(rmdir /Q dist && npx tsc || npx tsc )&& node ./dist/index.js" 
+    "flemme": "(rmdir /Q dist && npx tsc || npx tsc )&& node ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "@types/node": "^17.0.23",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.2.9",
     "typescript": "^4.6.3"
   }
 }
