--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./dist/index.js",
     "build": "rmdir /S dist && npx tsc || npx tsc",
     "flemme": "(rmdir /Q dist && npx tsc || npx tsc )&& node ./dist/index.js",
-    "build-linux": "rm -rf ./dist && tsc"
+    "build-linux": "rm -rf ./dist && tsc",
+    "flemme_linux": "rm -rf ./dist && tsc && node ./dist/index.js "
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "@types/node": "^17.0.23",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "install": "^0.13.0",
     "mongoose": "^6.2.9",
     "typescript": "^4.6.3"
   }
