--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build-app": "rm -rf dist && tsc",
     "start": "node ./dist/index.js",
-    "build": "rmdir /S dist && npx tsc || npx tsc",
+    "build-windows": "rmdir /S dist && npx tsc || npx tsc",
     "flemme": "(rmdir /Q dist && npx tsc || npx tsc )&& node ./dist/index.js",
     "build-linux": "rm -rf ./dist && tsc",
-    "flemme_linux": "rm -rf ./dist && tsc && node ./dist/index.js "
+    "flemme_linux": "rm -rf ./dist && tsc && node ./dist/index.js ",
+    "heroku": "rm -rf heroku-app/dist heroku-app/package.json && cp -R dist heroku-app/dist && cp package.json heroku-app/package.json && cd heroku-app && git add . && git commit -am 'publish' && git push heroku master"
   },
   "repository": {
     "type": "git",
@@ -19,14 +21,18 @@
   "bugs": {
     "url": "https://github.com/NicolasDebras/API_Burger/issues"
   },
+  "engines": {
+    "node": "14.19"
+  },
   "homepage": "https://github.com/NicolasDebras/API_Burger#readme",
-  "dependencies": {
+  "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "typescript": "^4.6.3"
+  },
+  "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "install": "^0.13.0",
-    "mongoose": "^6.2.10",
-    "typescript": "^4.6.3"
+    "mongoose": "^6.2.9"
   }
 }
